- Interface changes:
  - Test if a value for a tag can be saved is now done in
    MiniExiftool#save
    => There is no check at the moment you set a value:
       the tag occurs in MiniExiftool#changed_values
    => While calling MiniExiftool#save errors can occur (see next point)
  - MiniExiftool#save is a transaction: if one or more error occurs th file is
    not changed! In such a case the errors can be found in MiniExiftool#errors
  - Parameter opts of MiniExiftool.initialize is now a Hash
- Tests added

Version 0.2.0
- Better error handling (i.e. error messages)
- Checking if the exiftool command can be executed at loading the lib
- New class method exiftool_version
- Added tests
- Documentation completed

Version 0.1.2
- Bugfix for Windows (Tempfile)
  Thanks to Jérome Soika for testing
- Regexes optimized (a little bit)
- New class-method MiniExiftool.writable_tags

Version 0.1.1
- Fixing bug [#8073]
  Handling the '-' in tag Self-timer
  Thanks to Eric Young

Version 0.1.0
- New method "revert"
- More tests

Version 0.0.1
- Initial release